--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,13 @@ dependencies:
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
   get_it: ^7.2.0
-  flutter_hooks: 0.18.2+1
-  ionicons: ^0.1.2
+  flutter_hooks: ^0.18.6
+  ionicons: ^0.2.2
   # For Model
-  json_serializable: ^5.0.2
-  freezed_annotation: ^0.15.0
-  connectivity_plus: ^2.3.0
-  dio: ^4.0.1
+  json_serializable: ^6.6.1
+  freezed_annotation: ^2.2.0
+  connectivity_plus: ^3.0.3
+  dio: ^5.0.2
   cached_network_image: ^3.2.0
 dev_dependencies:
   flutter_test:
